<resources>
    <string name="app_name" translatable="false">PWr</string>
    <string name="CatImageDescription" translatable="false">Welcome to the internet!</string>
    <string name="WhatIUsed">App uses:</string>
    <string name="WhatIUsedContent">Application was written using Android Studio in Java 8.
        Whole project is open source, complete list of libraries and code can be found on GitHub.
        Application is compatible with android higher and equal to 4.1.
        More information about this project can be found on official GitHub repository.</string>
    <string name="about">About</string>
    <string name="action_settings">Settings</string>
    <string name="alertDialog_areYouSureYouWantToExit">Are You sure You want to exit?</string>
    <string name="alertDialog_noEmailAppInstalled">Looks like, there\'s no email client installed on Your device :-/</string>
    <string name="alertDialog_noGoogleMapsInstalled">Looks like, there are no Google Maps installed on Your device. It\'s really hard to navigate without a map :-/</string>
    <string name="alertDialog_noInternetConnection">Looks like, Your device isn\'t connected to the internet… Some functions may not work correctly :-/</string>
    <string name="buildings">Buildings</string>
    <string name="cancel">Cancel</string>
    <string name="cats">Cats</string>
    <string name="contact">Contact</string>
    <string name="done_button">Next</string>
    <string name="exit">Exit</string>
    <string name="introBeforeWeStartDesc">Before we start, choose Your department from the list below. You can change Your selection and add more departments later, using the settings menu.</string>
    <string name="introBeforeWeStartTitle">Before we start</string>
    <string name="introThankYouTitle">Thanks!</string>
    <string name="introWelcomeDesc">Welcome to the unofficial app of Wrocław University of Technology!</string>
    <string name="introWelcomeTitle">Hello</string>
    <string name="links">Information</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="news">News</string>
    <string name="offlineMode">Offline mode</string>
    <string name="ok_sad" translatable="false">OK :-(</string>
    <string name="skip_button">Skip</string>
    <string name="something_is_broken">Something went wrong…</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="pref_title_use_old_parser">Use deprecated parser</string>
    <string name="pref_title_use_ctt">Chrome Custom Tabs</string>
    <string name="pref_title_show_intro">Show welcome screen</string>
    <string name="pref_header_layout">Interface</string>
    <string name="pref_header_newsfeed">News sources</string>
    <string name="pref_header_notifications">Other</string>
    <string name="pref_title_animations">News animation</string>
    <string name="pref_title_news_layout">Card view</string>
    <string name="pref_title_pwr_all">Wrocław University of Technology Main Site</string>
    <string name="pref_desc_animations">Choose animation, that will be used when news appear on the screen</string>
    <string name="pref_desc_news_layout">Use cards on news view, instead of classic list</string>
    <string name="pref_desc_no_sorting">Show news from selected departments first. Useful, if Your department doesn\'t append date to their news.</string>
    <string name="pref_desc_offline_mode_prompt">App won\'t watch for internet connection</string>
    <string name="pref_desc_show_intro">Show this marvelous intro screen on next startup</string>
    <string name="pref_desc_use_ctt">Links will be opened in chrome custom tabs, if Google Chrome is installed</string>
    <string name="pref_desc_use_old_parser">Use old parser (Jsoup), instead of the new one (XPP). May be useful, if You receive errors in newsfeed</string>
    <string name="pref_title_no_sorting">Prioritize departments</string>
    <string name="pref_title_offline_mode_prompt">Disable network check</string>
    <string name="introThankYouDesc">I\'d like to thank everybody, who helped me with this project, bravely testing alpha versions and reporting bugs. Special thanks for C. N. for creating graphics and databases, and J. K. for supplying me with proper ammounts of coffee. Thanks!</string>
    <string name="pwr_data_phone">71 320 26 00</string>
    <string name="pwr_data_main_site">http://pwr.edu.pl/en</string>
    <string name="nip_with_colon">NIP:</string>
    <string name="pwr_data_nip">896–000-58-51</string>
    <string name="regon_with_colon">REGON:</string>
    <string name="pwr_data_regon">000001614</string>
    <string name="pwr_data_strudent_mail">https://smail.pwr.edu.pl</string>
    <string name="cwint_with_colon">CWINT:</string>
    <string name="pwr_data_cwint">http://centrum.pwr.edu.pl/</string>
    <string name="pwr_data_oze">http://oze.pwr.edu.pl/</string>
    <string name="pwr_data_eportal">http://eportal.pwr.edu.pl/?lang=en</string>
    <string name="pwr_data_biuro_karier">http://biurokarier.pwr.edu.pl/en</string>
    <string name="address_with_colon">Address:</string>
    <string name="device_info">Device info</string>
    <string name="e_portal_with_colon">e-Portal:</string>
    <string name="geo_parameters_with_colon">Entrance location:</string>
    <string name="invite_to_beta">Invite friends to try out beta</string>
    <string name="message_description">Description</string>
    <string name="message_title">Title</string>
    <string name="more_info_on_github">You can find more information on GitHub</string>
    <string name="otwarte_zasoby_edukacyjne_with_colon">e-Learning:</string>
    <string name="phone_number_with_colon">Phone Number:</string>
    <string name="send_message">Send</string>
    <string name="student_mail_with_colon">Student Mail:</string>
    <string name="website_with_colon">Website:</string>
    <string name="facebook">Facebook</string>
    <string name="google_plus">Google Plus</string>
    <string name="instagram">Instagram</string>
    <string name="linkedin">LinkedIn</string>
    <string name="snapchat">Snapchat</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">YouTube</string>
    <string name="always_beta">Always in beta!</string>
    <string name="biuro_karier_with_colon">Career Office:</string>
    <string name="kopiuj_adres">Copy address</string>
    <string name="navigate">Navigate</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="pref_title_w1">Architecture</string>
    <string name="pref_title_w10">Mechanical Engineering</string>
    <string name="pref_title_w11">Fundamental Problems Of Technology</string>
    <string name="pref_title_w12">Microsystem Electronics and Fotonics</string>
    <string name="pref_title_w13">Pure and Applied Mathematics</string>
    <string name="pref_title_w2">Civil Engineering</string>
    <string name="pref_title_w3">Chemistry</string>
    <string name="pref_title_w4">Electronics</string>
    <string name="pref_title_w5">Electrical Engineering</string>
    <string name="pref_title_w6">Geoengineering, Mining and Geology</string>
    <string name="pref_title_w7">Environmental Engineering</string>
    <string name="pref_title_w8">Computer Science and Management</string>
    <string name="pref_title_w9">Mechanical and Power Engineering</string>
    <string name="pwr_data_address">Wybrzeże Wyspiańskiego 27 50–370 Wrocław</string>
    <string name="share">Share</string>
    <string name="show_on_map">Show on map</string>

</resources>
