<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="news_all"
        android:title="@string/pref_title_pwr_all" />


    <CheckBoxPreference
        android:defaultValue="false"
        android:key="news_w1"
        android:title="@string/pref_title_w1" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="news_w2"
        android:title="@string/pref_title_w2" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="news_w3"
        android:title="@string/pref_title_w3" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="news_w4"
        android:title="@string/pref_title_w4" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="news_w5"
        android:title="@string/pref_title_w5" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="news_w6"
        android:title="@string/pref_title_w6" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="news_w7"
        android:title="@string/pref_title_w7" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="news_w8"
        android:title="@string/pref_title_w8" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="news_w9"
        android:title="@string/pref_title_w9" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="news_w10"
        android:title="@string/pref_title_w10" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="news_w11"
        android:title="@string/pref_title_w11" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="news_w12"
        android:title="@string/pref_title_w12" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="news_w13"
        android:title="@string/pref_title_w13" />


</PreferenceScreen>
