<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="news_layout"
        android:summary="@string/pref_desc_news_layout"
        android:title="@string/pref_desc_news_layout" />

    <ListPreference
        android:defaultValue="slide"
        android:entries="@array/array_animations"
        android:entryValues="@array/array_animations_values"
        android:key="news_animation"
        android:title="@string/pref_title_animations" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="news_use_chrome"
        android:summary="@string/pref_desc_use_ctt"
        android:title="@string/pref_title_use_ctt" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="Parser_old"
        android:summary="@string/pref_desc_use_old_parser"
        android:title="@string/pref_title_use_old_parser" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="Offline_mode_prompt"
        android:summary="@string/pref_desc_offline_mode_prompt"
        android:title="@string/pref_title_offline_mode_prompt" />

</PreferenceScreen>
