<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/navbar_top">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_web_asset_black_24dp"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_buildings"
            android:icon="@drawable/ic_business_black_24dp"
            android:title="@string/buildings" />

        <item
            android:id="@+id/nav_radio"
            android:icon="@drawable/ic_radio_black_24dp"
            android:title="@string/Radio_Luz" />

        <item
            android:id="@+id/nav_cats"
            android:icon="@drawable/ic_cat_face"
            android:title="@string/cats" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />

    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/navbar_bottom">

        <item
            android:id="@+id/nav_bugreport"
            android:icon="@drawable/ic_bug_report_black_24dp"
            android:title="@string/contactandreport" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about" />


    </group>


</menu>
