<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pwr_adress_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/address_with_colon"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/pwr_adress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pwr_adress_title"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/pwr_data_address"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/pwr_phone_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pwr_adress"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/phone_number_with_colon"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/pwr_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pwr_phone_title"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:autoLink="phone"
            android:text="@string/pwr_data_phone"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/pwr_website_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pwr_phone"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/website_with_colon"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/pwr_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pwr_website_title"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:autoLink="web"
            android:text="@string/pwr_data_main_site"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall" />


        <TextView
            android:id="@+id/pwr_nip_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pwr_website"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/nip_with_colon"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/pwr_nip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pwr_nip_title"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/pwr_data_nip"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/pwr_regon_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pwr_nip"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/regon_with_colon"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pwr_regon_title"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/pwr_data_regon"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>


