<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/Facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:weightSum="10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:gravity="center"
                android:text="@string/facebook"
                android:textAlignment="center"
                android:textColor="#000000" />

            <ImageButton
                android:id="@+id/imageButtonVisitFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:src="@drawable/ic_facebook"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/GooglePlus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Facebook"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:weightSum="10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:gravity="center"
                android:text="@string/google_plus"
                android:textAlignment="center"
                android:textColor="#000000" />

            <ImageButton
                android:id="@+id/imageButtonVisitGooglePlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:src="@drawable/ic_google_plus"
                tools:ignore="ContentDescription" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/Instagram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/GooglePlus"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:weightSum="10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:gravity="center"
                android:text="@string/instagram"
                android:textAlignment="center"
                android:textColor="#000000" />

            <ImageButton
                android:id="@+id/imageButtonVisitInstagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:src="@drawable/ic_instagram"
                tools:ignore="ContentDescription" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinkedIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Instagram"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:weightSum="10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:gravity="center"
                android:text="@string/linkedin"
                android:textAlignment="center"
                android:textColor="#000000" />

            <ImageButton
                android:id="@+id/imageButtonVisitLinkedIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:src="@drawable/ic_linkedin"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Snapchat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LinkedIn"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:weightSum="10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:gravity="center"
                android:text="@string/snapchat"
                android:textAlignment="center"
                android:textColor="#000000" />

            <ImageButton
                android:id="@+id/imageButtonVisitSnapchat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:src="@drawable/ic_snapchat"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Snapchat"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:weightSum="10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:gravity="center"
                android:text="@string/twitter"
                android:textAlignment="center"
                android:textColor="#000000" />

            <ImageButton
                android:id="@+id/imageButtonVisitTwitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:src="@drawable/ic_twitter"
                tools:ignore="ContentDescription" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Twitter"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:weightSum="10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:gravity="center"
                android:text="@string/youtube"
                android:textAlignment="center"
                android:textColor="#000000" />

            <ImageButton
                android:id="@+id/imageButtonVisitYouTube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:src="@drawable/ic_youtube_play"
                tools:ignore="ContentDescription" />


        </LinearLayout>


    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>